--- a/public/huddle-landing/index.html
+++ b/public/huddle-landing/index.html
@@ -17,12 +17,47 @@
     </title>
 
     <link rel="stylesheet" href="/node_modules/normalize.css/normalize.css" />
+    <script
+      type="module"
+      src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"
+    ></script>
+    <script
+      nomodule
+      src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"
+    ></script>
+
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+
+    <link
+      href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400&family=Poppins:wght@0,400;0,600&display=swap"
+      rel="stylesheet"
+    />
     <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
-    Build The Community Your Fans Will Love Huddle re-imagines the way we build
-    communities. You have a voice, but so does your audience. Create connections
-    with your users as you engage in genuine discussion. Register
+    <div class="container-wrapper">
+      <div class="container">
+        <div class="art-wrapper">
+          <div class="art">
+            <img src="./images/logo.svg" alt="Huddle Logo" />
+            <img
+              src="./images/illustration-mockups.svg"
+              alt="Mockups Illustration"
+            />
+          </div>
+        </div>
+        <div class="description">
+          <h1>Build The Community Your Fans Will Love</h1>
+          <p>
+            Huddle re-imagines the way we build communities. You have a voice,
+            but so does your audience. Create connections with your users as you
+            engage in genuine discussion.
+          </p>
+        </div>
+        <a href="#"> Register </a>
+      </div>
+    </div>
 
     <footer>
       <p class="attribution">
