fixed closing section

--- a/huddle-landing/index.html
+++ b/huddle-landing/index.html
@@ -44,7 +44,7 @@
           alt="Mockups Illustration"
           class="mockup"
         />
-      </div>
+      </section>
       <div class="description">
         <h1>Build The Community Your Fans Will Love</h1>
         <p>
