added desktop version

--- a/huddle-landing/index.html
+++ b/huddle-landing/index.html
@@ -37,23 +37,25 @@
   </head>
   <body>
     <div class="container">
-      <section class="art">
-        <img src="./images/logo.svg" alt="Huddle Logo" id="logo" />
-        <img
-          src="./images/illustration-mockups.svg"
-          alt="Mockups Illustration"
-          class="mockup"
-        />
-      </section>
-      <div class="description">
-        <h1>Build The Community Your Fans Will Love</h1>
-        <p>
-          Huddle re-imagines the way we build communities. You have a voice, but
-          so does your audience. Create connections with your users as you
-          engage in genuine discussion.
-        </p>
-        <a href="#" class="cta"> Register </a>
-      </section>
+      <main>
+        <section class="art">
+          <img src="./images/logo.svg" alt="Huddle Logo" id="logo" />
+          <img
+            src="./images/illustration-mockups.svg"
+            alt="Mockups Illustration"
+            class="mockup"
+          />
+        </section>
+        <section class="description">
+          <h1>Build The Community Your Fans Will Love</h1>
+          <p>
+            Huddle re-imagines the way we build communities. You have a voice,
+            but so does your audience. Create connections with your users as you
+            engage in genuine discussion.
+          </p>
+          <a href="#" class="cta"> Register </a>
+        </section>
+      </main>
       <footer>
         <ul>
           <li>
@@ -70,7 +72,8 @@
           Challenge by
           <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
             >Frontend Mentor</a
-          >. Coded by <a href="https://ortiz.studio">Antonio Ortiz</a>.
+          >. <br />
+          Coded by <a href="https://ortiz.studio">Antonio Ortiz</a>.
         </p>
       </footer>
     </div>
