fix margins in huddle landing desktop

--- a/huddle-landing/index.html
+++ b/huddle-landing/index.html
@@ -72,8 +72,7 @@
           Challenge by
           <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
             >Frontend Mentor</a
-          >. <br />
-          Coded by <a href="https://ortiz.studio">Antonio Ortiz</a>.
+          >. Coded by <a href="https://ortiz.studio">Antonio Ortiz</a>.
         </p>
       </footer>
     </div>
