--- a/huddle-landing/index.html
+++ b/huddle-landing/index.html
@@ -34,6 +34,11 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="styles.css" />
+    <link
+      rel="shortcut icon"
+      href="./images/favicon-32x32.png"
+      type="image/x-icon"
+    />
   </head>
   <body>
     <div class="container">
