changed normalize url

--- a/challenges/huddle-landing/index.html
+++ b/challenges/huddle-landing/index.html
@@ -16,7 +16,10 @@
       Frontend Mentor | Huddle landing page with single introductory section
     </title>
 
-    <link rel="stylesheet" href="/node_modules/normalize.css/normalize.css" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css"
+    />
     <script
       type="module"
       src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"
