added monorepo landing page

--- a/index.html
+++ b/index.html
@@ -2,11 +2,66 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite App</title>
+    <title>Frontend Mentor Solutions</title>
+
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css"
+    />
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/@picocss/pico@2/css/pico.min.css"
+    />
+    <link rel="stylesheet" href="/assets/style.css" />
   </head>
   <body>
-    <div id="app"></div>
+    <header>
+      <h1>Frontend Mentor Solutions</h1>
+    </header>
+
+    <main>
+      <article>
+        <header>
+          <a href="/challenges/qr-code-component/index.html"
+            >Qr code component solution</a
+          >
+        </header>
+        <a href="/challenges/qr-code-component/index.html">
+          <img
+            src="/challenges/qr-code-component/screenshot.png"
+            alt="Qr code component screenshot"
+          />
+        </a>
+      </article>
+
+      <article>
+        <header>
+          <a href="/challenges/social-links-profile/index.html"
+            >Social links profile solution</a
+          >
+        </header>
+        <a href="/challenges/social-links-profile/index.html"></a>
+          <img
+            src="/challenges/social-links-profile/screenshot.png"
+            alt="Social links profile solution"
+          />
+        </a>
+      </article>
+
+      <article>
+        <header>
+          <a href="/challenges/huddle-landing/index.html"
+            >Huddle Landing solution</a
+          >
+        </header>
+        <a href="/challenges/huddle-landing/index.html">
+          <img
+            src="/challenges/huddle-landing/screenshot.png"
+            alt="Huddle landing solution"
+          />
+        </a>
+      </article>
+    </main>
   </body>
 </html>
