--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
             >Social links profile solution</a
           >
         </header>
-        <a href="challenges/social-links-profile/index.html"></a>
+        <a href="challenges/social-links-profile/index.html">
           <img
             src="challenges/social-links-profile/screenshot.png"
             alt="Social links profile solution"
