--- a/challenges/recipe-page/index.html
+++ b/challenges/recipe-page/index.html
@@ -19,138 +19,140 @@
     <title>Frontend Mentor | Recipe page</title>
   </head>
   <body>
-    <section class="art">
-      <img
-        src="assets/images/image-omelette.jpeg"
-        alt="Image omelette"
-        class="hero-art"
-      />
-    </section>
-    <main>
-      <section class="hero">
-        <header>
-          <h1>Simple Omelette Recipe</h1>
-        </header>
-        <p>
-          An easy and quick dish, perfect for any meal. This classic omelette
-          combines beaten eggs cooked to perfection, optionally filled with your
-          choice of cheese, vegetables, or meats.
-        </p>
+    <div class="container">
+      <section class="art-container">
+        <img
+          src="assets/images/image-omelette.jpeg"
+          alt="Image omelette"
+          class="art"
+        />
       </section>
-      <section class="ingredients">
-        <header>
-          <h3>Preparation time</h3>
-        </header>
-        <ul>
-          <li>
-            <p><strong>Total:</strong>Approximately 10 minutes</p>
-          </li>
-          <li>
-            <p><strong>Preparation:</strong>5 minutes</p>
-          </li>
-          <li>
-            <p><strong>Cooking:</strong>5 minutes</p>
-          </li>
-        </ul>
-      </section>
-      <section class="ingredients">
-        <header>
-          <h2>Ingredients</h2>
-        </header>
-        <ul>
-          <li><p>2-3 large eggs</p></li>
-          <li><p>Salt, to taste</p></li>
-          <li><p>Pepper, to taste</p></li>
-          <li><p>1 tablespoon of butter or oil</p></li>
-          <li>
-            <p>
-              Optional fillings: cheese, diced vegetables, cooked meats, herbs
-            </p>
-          </li>
-        </ul>
-      </section>
-      <section class="instructions">
-        <header>
-          <h2>Instructions</h2>
-        </header>
-        <ol>
-          <li>
-            <p>
-              <strong>Beat the eggs:</strong>In a bowl, beat the eggs with a
-              pinch of salt and pepper until they are well mixed. You can add a
-              tablespoon of water or milk for a fluffier texture.
-            </p>
-          </li>
-          <li>
-            <p>
-              <strong>Heat the pan:</strong>lace a non-stick frying pan over
-              medium heat and add butter or oil.
-            </p>
-          </li>
-          <li>
-            <p>
-              <strong>Cook the omelette:</strong>Once the butter is melted and
-              bubbling, pour in the eggs. Tilt the pan to ensure the eggs evenly
-              coat the surface.
-            </p>
-          </li>
-          <li>
-            <p>
-              <strong>Add fillings (optional):</strong>When the eggs begin to
-              set at the edges but are still slightly runny in the middle,
-              sprinkle your chosen fillings over one half of the omelette.
-            </p>
-          </li>
-          <li>
-            <p>
-              <strong> Fold and serve:</strong>As the omelette continues to
-              cook, carefully lift one edge and fold it over the fillings. Let
-              it cook for another minute, then slide it onto a plate.
-            </p>
-          </li>
-          <li>
-            <p>
-              <strong> Enjoy:</strong>Serve hot, with additional salt and pepper
-              if needed.
-            </p>
-          </li>
-        </ol>
-      </section>
-      <hr />
-      <section class="nutrition">
-        <header>
-          <h2>Nutrition</h2>
-        </header>
-        <p>
-          The table below shows nutritional values per serving without the
-          additional fillings.
-        </p>
-        <table>
-          <tr>
-            <td>Calories</td>
-            <td class="cal">277kcal</td>
-          </tr>
-          <tr>
-            <td>Carbs</td>
-            <td class="cal">0g</td>
-          </tr>
-          <tr>
-            <td>Protein</td>
-            <td class="cal">20g</td>
-          </tr>
-          <tr>
-            <td>Fat</td>
-            <td class="cal">22g</td>
-          </tr>
-        </table>
-      </section>
-    </main>
+      <main>
+        <section class="hero">
+          <header>
+            <h1>Simple Omelette Recipe</h1>
+          </header>
+          <p>
+            An easy and quick dish, perfect for any meal. This classic omelette
+            combines beaten eggs cooked to perfection, optionally filled with
+            your choice of cheese, vegetables, or meats.
+          </p>
+        </section>
+        <section class="ingredients">
+          <header>
+            <h3>Preparation time</h3>
+          </header>
+          <ul>
+            <li>
+              <p><strong>Total:</strong>Approximately 10 minutes</p>
+            </li>
+            <li>
+              <p><strong>Preparation:</strong>5 minutes</p>
+            </li>
+            <li>
+              <p><strong>Cooking:</strong>5 minutes</p>
+            </li>
+          </ul>
+        </section>
+        <section class="ingredients">
+          <header>
+            <h2>Ingredients</h2>
+          </header>
+          <ul>
+            <li><p>2-3 large eggs</p></li>
+            <li><p>Salt, to taste</p></li>
+            <li><p>Pepper, to taste</p></li>
+            <li><p>1 tablespoon of butter or oil</p></li>
+            <li>
+              <p>
+                Optional fillings: cheese, diced vegetables, cooked meats, herbs
+              </p>
+            </li>
+          </ul>
+        </section>
+        <section class="instructions">
+          <header>
+            <h2>Instructions</h2>
+          </header>
+          <ol>
+            <li>
+              <p>
+                <strong>Beat the eggs:</strong>In a bowl, beat the eggs with a
+                pinch of salt and pepper until they are well mixed. You can add
+                a tablespoon of water or milk for a fluffier texture.
+              </p>
+            </li>
+            <li>
+              <p>
+                <strong>Heat the pan:</strong>lace a non-stick frying pan over
+                medium heat and add butter or oil.
+              </p>
+            </li>
+            <li>
+              <p>
+                <strong>Cook the omelette:</strong>Once the butter is melted and
+                bubbling, pour in the eggs. Tilt the pan to ensure the eggs
+                evenly coat the surface.
+              </p>
+            </li>
+            <li>
+              <p>
+                <strong>Add fillings (optional):</strong>When the eggs begin to
+                set at the edges but are still slightly runny in the middle,
+                sprinkle your chosen fillings over one half of the omelette.
+              </p>
+            </li>
+            <li>
+              <p>
+                <strong> Fold and serve:</strong>As the omelette continues to
+                cook, carefully lift one edge and fold it over the fillings. Let
+                it cook for another minute, then slide it onto a plate.
+              </p>
+            </li>
+            <li>
+              <p>
+                <strong> Enjoy:</strong>Serve hot, with additional salt and
+                pepper if needed.
+              </p>
+            </li>
+          </ol>
+        </section>
+        <hr />
+        <section class="nutrition">
+          <header>
+            <h2>Nutrition</h2>
+          </header>
+          <p>
+            The table below shows nutritional values per serving without the
+            additional fillings.
+          </p>
+          <table>
+            <tr>
+              <td>Calories</td>
+              <td class="cal">277kcal</td>
+            </tr>
+            <tr>
+              <td>Carbs</td>
+              <td class="cal">0g</td>
+            </tr>
+            <tr>
+              <td>Protein</td>
+              <td class="cal">20g</td>
+            </tr>
+            <tr>
+              <td>Fat</td>
+              <td class="cal">22g</td>
+            </tr>
+          </table>
+        </section>
+      </main>
 
-    <footer class="attribution">
-      Challenge by
-      <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
-        >Frontend Mentor</a
-      >. Coded by <a href="https://ortiz.studio">Antonio Ortiz</a>.
-    </footer>
+      <footer class="attribution">
+        Challenge by
+        <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
+          >Frontend Mentor</a
+        >. Coded by <a href="https://ortiz.studio">Antonio Ortiz</a>.
+      </footer>
+    </div>
   </body>
 </html>
