added readme and links for recipe page

--- a/index.html
+++ b/index.html
@@ -62,6 +62,18 @@
           />
         </a>
       </article>
+
+      <article>
+        <header>
+          <a href="challenges/recipe-page/index.html">Recipe page solution</a>
+        </header>
+        <a href="challenges/recipe-page/index.html">
+          <img
+            src="challenges/recipe-page/screenshot.png"
+            alt="Recipe page solution"
+          />
+        </a>
+      </article>
     </main>
   </body>
 </html>
