fix duplicate ingredients class

--- a/challenges/recipe-page/index.html
+++ b/challenges/recipe-page/index.html
@@ -38,7 +38,7 @@
             your choice of cheese, vegetables, or meats.
           </p>
         </section>
-        <section class="ingredients">
+        <section class="preparation">
           <header>
             <h3>Preparation time</h3>
           </header>
