added preparation time bg on recipe page

--- a/challenges/recipe-page/index.html
+++ b/challenges/recipe-page/index.html
@@ -40,9 +40,9 @@
         </section>
         <section class="preparation">
           <header>
-            <h3>Preparation time</h3>
+            <h2>Preparation time</h2>
           </header>
-          <ul>
+          <ul class="preparation-list-items">
             <li>
               <p><strong>Total:</strong>Approximately 10 minutes</p>
             </li>
@@ -58,7 +58,7 @@
           <header>
             <h2>Ingredients</h2>
           </header>
-          <ul>
+          <ul class="ingredients-list-items">
             <li><p>2-3 large eggs</p></li>
             <li><p>Salt, to taste</p></li>
             <li><p>Pepper, to taste</p></li>
@@ -74,7 +74,7 @@
           <header>
             <h2>Instructions</h2>
           </header>
-          <ol>
+          <ol class="instructions-list-items">
             <li>
               <p>
                 <strong>Beat the eggs:</strong>In a bowl, beat the eggs with a
