added landmarks, chanded img hero section for header

--- a/challenges/recipe-page/index.html
+++ b/challenges/recipe-page/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
@@ -20,13 +20,13 @@
   </head>
   <body>
     <div class="container">
-      <section class="art-container">
+      <header class="art-container">
         <img
           src="assets/images/image-omelette.jpeg"
           alt="Image omelette"
           class="art"
         />
-      </section>
+      </header>
       <main>
         <section class="hero">
           <header>
