--- a/challenges/blog-preview-card/index.html
+++ b/challenges/blog-preview-card/index.html
@@ -28,30 +28,30 @@
     <title>Frontend Mentor | Blog preview card</title>
   </head>
   <body>
-    <div class="card">
+    <article class="card">
+      <div id="cover" aria-label="html tag"></div>
+
       <section>
-        <div class="art">
-          <img
-            src="assets/images/illustration-article.svg"
-            alt="Article with html tags"
-          />
-        </div>
         <header>
           <p><span class="tag">Learning</span></p>
           <p><span class="date">Published 21 Dec 2023</span></p>
-          <h1>HTML & CSS foundations</h1>
+          <a href="#" class="title"><h1>HTML & CSS foundations</h1></a>
         </header>
 
-        <p>
+        <p class="description">
           These languages are the backbone of every website, defining structure,
           content, and presentation.
         </p>
       </section>
       <footer>
-        <img src="assets/images/image-avatar.webp" alt="Greg Hooper avatar" />
+        <img
+          src="assets/images/image-avatar.webp"
+          alt="Greg Hooper avatar"
+          id="avatar"
+        />
         <h2>Greg Hooper</h2>
       </footer>
-    </div>
+    </article>
 
     <div class="attribution">
       Challenge by
