--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
@@ -71,6 +71,18 @@
           <img
             src="challenges/recipe-page/screenshot.png"
             alt="Recipe page solution"
+          />
+        </a>
+      </article>
+
+      <article>
+        <header>
+          <a href="challenges/blog-preview-card/">Blog preview card solution</a>
+        </header>
+        <a href="challenges/blog-preview-card/index.html">
+          <img
+            src="challenges/blog-preview-card/screenshot.png"
+            alt="Blog preview card solution"
           />
         </a>
       </article>
