changed background-url for img with object-fit tag

--- a/challenges/blog-preview-card/index.html
+++ b/challenges/blog-preview-card/index.html
@@ -29,7 +29,11 @@
   </head>
   <body>
     <article class="card">
-      <div id="cover" aria-label="html tag"></div>
+      <img
+        src="assets/images/illustration-article.svg"
+        alt="html tag"
+        id="cover"
+      />
 
       <section>
         <header>
