--- a/challenges/blog-preview-card/index.html
+++ b/challenges/blog-preview-card/index.html
@@ -39,7 +39,9 @@
         <header>
           <p><span class="tag">Learning</span></p>
           <p><span class="date">Published 21 Dec 2023</span></p>
-          <a href="#" class="title"><h1>HTML & CSS foundations</h1></a>
+          <h1>
+            <span><a href="#" class="title">HTML & CSS foundations</a></span>
+          </h1>
         </header>
 
         <p class="description">
