added main landmark

--- a/challenges/blog-preview-card/index.html
+++ b/challenges/blog-preview-card/index.html
@@ -28,36 +28,38 @@
     <title>Frontend Mentor | Blog preview card</title>
   </head>
   <body>
-    <article class="card">
-      <img
-        src="assets/images/illustration-article.svg"
-        alt="html tag"
-        id="cover"
-      />
-
-      <section>
-        <header>
-          <p><span class="tag">Learning</span></p>
-          <p><span class="date">Published 21 Dec 2023</span></p>
-          <h1>
-            <span><a href="#" class="title">HTML & CSS foundations</a></span>
-          </h1>
-        </header>
-
-        <p class="description">
-          These languages are the backbone of every website, defining structure,
-          content, and presentation.
-        </p>
-      </section>
-      <footer>
+    <main>
+      <article class="card">
         <img
-          src="assets/images/image-avatar.webp"
-          alt="Greg Hooper avatar"
-          id="avatar"
+          src="assets/images/illustration-article.svg"
+          alt="html tag"
+          id="cover"
         />
-        <h2>Greg Hooper</h2>
-      </footer>
-    </article>
+
+        <section>
+          <header>
+            <p><span class="tag">Learning</span></p>
+            <p><span class="date">Published 21 Dec 2023</span></p>
+            <h1>
+              <span><a href="#" class="title">HTML & CSS foundations</a></span>
+            </h1>
+          </header>
+
+          <p class="description">
+            These languages are the backbone of every website, defining
+            structure, content, and presentation.
+          </p>
+        </section>
+        <footer>
+          <img
+            src="assets/images/image-avatar.webp"
+            alt="Greg Hooper avatar"
+            id="avatar"
+          />
+          <h2>Greg Hooper</h2>
+        </footer>
+      </article>
+    </main>
 
     <div class="attribution">
       Challenge by
