--- a/challenges/blog-preview-card/index.html
+++ b/challenges/blog-preview-card/index.html
@@ -36,20 +36,18 @@
           id="cover"
         />
 
-        <section>
-          <header>
-            <p><span class="tag">Learning</span></p>
-            <p><span class="date">Published 21 Dec 2023</span></p>
-            <h1>
-              <span><a href="#" class="title">HTML & CSS foundations</a></span>
-            </h1>
-          </header>
+        <header>
+          <p><span class="tag">Learning</span></p>
+          <p><span class="date">Published 21 Dec 2023</span></p>
+          <h1>
+            <span><a href="#" class="title">HTML & CSS foundations</a></span>
+          </h1>
+        </header>
 
-          <p class="description">
-            These languages are the backbone of every website, defining
-            structure, content, and presentation.
-          </p>
-        </section>
+        <p class="description">
+          These languages are the backbone of every website, defining structure,
+          content, and presentation.
+        </p>
         <footer>
           <img
             src="assets/images/image-avatar.webp"
