--- a/index.html
+++ b/index.html
@@ -86,6 +86,20 @@
           />
         </a>
       </article>
+
+      <article>
+        <header>
+          <a href="challenges/product-preview-card/"
+            >Product preview card solution</a
+          >
+        </header>
+        <a href="challenges/product-preview-card/index.html">
+          <img
+            src="challenges/product-preview-card/screenshot.png"
+            alt="Product preview card solution"
+          />
+        </a>
+      </article>
     </main>
   </body>
 </html>
