--- a/index.html
+++ b/index.html
@@ -21,85 +21,93 @@
     </header>
 
     <main>
-      <article>
-        <header>
-          <a href="challenges/qr-code-component/index.html"
-            >Qr code component solution</a
-          >
-        </header>
-        <a href="challenges/qr-code-component/index.html">
-          <img
-            src="challenges/qr-code-component/screenshot.png"
-            alt="Qr code component screenshot"
-          />
-        </a>
-      </article>
+      <h2>Newbie solutions</h2>
+      <section>
+        <article>
+          <header>
+            <a href="challenges/qr-code-component/index.html"
+              >Qr code component solution</a
+            >
+          </header>
+          <a href="challenges/qr-code-component/index.html">
+            <img
+              src="challenges/qr-code-component/screenshot.png"
+              alt="Qr code component screenshot"
+            />
+          </a>
+        </article>
 
-      <article>
-        <header>
-          <a href="challenges/social-links-profile/index.html"
-            >Social links profile solution</a
-          >
-        </header>
-        <a href="challenges/social-links-profile/index.html">
-          <img
-            src="challenges/social-links-profile/screenshot.png"
-            alt="Social links profile solution"
-          />
-        </a>
-      </article>
+        <article>
+          <header>
+            <a href="challenges/social-links-profile/index.html"
+              >Social links profile solution</a
+            >
+          </header>
+          <a href="challenges/social-links-profile/index.html">
+            <img
+              src="challenges/social-links-profile/screenshot.png"
+              alt="Social links profile solution"
+            />
+          </a>
+        </article>
 
-      <article>
-        <header>
-          <a href="challenges/huddle-landing/index.html"
-            >Huddle Landing solution</a
-          >
-        </header>
-        <a href="challenges/huddle-landing/index.html">
-          <img
-            src="challenges/huddle-landing/screenshot.png"
-            alt="Huddle landing solution"
-          />
-        </a>
-      </article>
+        <article>
+          <header>
+            <a href="challenges/huddle-landing/index.html"
+              >Huddle Landing solution</a
+            >
+          </header>
+          <a href="challenges/huddle-landing/index.html">
+            <img
+              src="challenges/huddle-landing/screenshot.png"
+              alt="Huddle landing solution"
+            />
+          </a>
+        </article>
 
-      <article>
-        <header>
-          <a href="challenges/recipe-page/index.html">Recipe page solution</a>
-        </header>
-        <a href="challenges/recipe-page/index.html">
-          <img
-            src="challenges/recipe-page/screenshot.png"
-            alt="Recipe page solution"
-          />
-        </a>
-      </article>
+        <article>
+          <header>
+            <a href="challenges/recipe-page/index.html">Recipe page solution</a>
+          </header>
+          <a href="challenges/recipe-page/index.html">
+            <img
+              src="challenges/recipe-page/screenshot.png"
+              alt="Recipe page solution"
+            />
+          </a>
+        </article>
+      </section>
 
-      <article>
-        <header>
-          <a href="challenges/blog-preview-card/">Blog preview card solution</a>
-        </header>
-        <a href="challenges/blog-preview-card/index.html">
-          <img
-            src="challenges/blog-preview-card/screenshot.png"
-            alt="Blog preview card solution"
-          />
-        </a>
-      </article>
+      <h2>Junior solutions</h2>
+      <section>
+        <article>
+          <header>
+            <a href="challenges/blog-preview-card/"
+              >Blog preview card solution</a
+            >
+          </header>
+          <a href="challenges/blog-preview-card/index.html">
+            <img
+              src="challenges/blog-preview-card/screenshot.png"
+              alt="Blog preview card solution"
+            />
+          </a>
+        </article>
 
-      <article>
-        <header>
-          <a href="challenges/product-preview-card/"
-            >Product preview card solution</a
-          >
-        </header>
-        <a href="challenges/product-preview-card/index.html">
-          <img
-            src="challenges/product-preview-card/screenshot.png"
-            alt="Product preview card solution"
-          />
-        </a>
-      </article>
+        <article>
+          <header>
+            <a href="challenges/product-preview-card/"
+              >Product preview card solution</a
+            >
+          </header>
+          <a href="challenges/product-preview-card/index.html">
+            <img
+              src="challenges/product-preview-card/screenshot.png"
+              alt="Product preview card solution"
+            />
+          </a>
+        </article>
+      </section>
     </main>
   </body>
 </html>
