--- a/challenges/social-links-profile/index.html
+++ b/challenges/social-links-profile/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
@@ -11,37 +11,62 @@
       sizes="32x32"
       href="./assets/images/favicon-32x32.png"
     />
-    <link
-      rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css"
-    />
+    <link rel="stylesheet" href="/shared/assets/reset.css" />
 
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="assets/style.css" />
     <title>Frontend Mentor | Social links profile</title>
   </head>
   <body>
     <div class="container">
-      <main class="link-card">
-        <img src="./assets/images/avatar-jessica.jpeg" alt="Avatar Jessica" />
-        <h1>Jessica Randall</h1>
-        <h2>London, United Kingdom</h2>
-        <q> Front-end developer and avid reader.</q>
-        <nav>
-          <ul>
-            <li><a href="#">GitHub</a></li>
-            <li><a href="#">Frontend Mentor</a></li>
-            <li><a href="#">LinkedIn</a></li>
-            <li><a href="#">Twitter</a></li>
-            <li><a href="#">Instagram</a></li>
+      <main class="social">
+        <figure>
+          <img
+            src="./assets/images/avatar-jessica.jpeg"
+            alt="Avatar Jessica"
+            class="social__avatar"
+          />
+        </figure>
+        <header class="social__header">
+          <h1 class="social__header--name">Jessica Randall</h1>
+          <h2 class="social__header--location">London, United Kingdom</h2>
+          <q class="social__header--quote">
+            Front-end developer and avid reader.</q
+          >
+        </header>
+        <nav class="social__links">
+          <ul class="social__links--list">
+            <li class="social__links--list-item">
+              <a href="#" class="social__links--list-item--link">GitHub</a>
+            </li>
+            <li class="social__links--list-item">
+              <a href="#" class="social__links--list-item--link"
+                >Frontend Mentor</a
+              >
+            </li>
+            <li class="social__links--list-item">
+              <a href="#" class="social__links--list-item--link"> LinkedIn</a>
+            </li>
+            <li class="social__links--list-item">
+              <a href="#" class="social__links--list-item--link">Twitter</a>
+            </li>
+            <li class="social__links--list-item">
+              <a href="#" class="social__links--list-item--link">Instagram</a>
+            </li>
           </ul>
         </nav>
       </main>
-      <footer>
-        <section class="attribution">
+      <footer class="footer">
+        <section class="footer__attribution">
           Challenge by
-          <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
+          <a
+            href="https://www.frontendmentor.io?ref=challenge"
+            class="footer__attribution--link"
+            target="_blank"
             >Frontend Mentor</a
-          >. Coded by <a href="https://ortiz.studio">Antonio ortiz</a>.
+          >. Coded by
+          <a href="https://ortiz.studio" class="footer__attribution--link"
+            >Antonio ortiz</a
+          >.
         </section>
       </footer>
     </div>
