--- a/challenges/qr-code-component/index.html
+++ b/challenges/qr-code-component/index.html
@@ -45,13 +45,19 @@
       </section>
     </main>
 
-    <footer>
-      <div class="attribution">
+    <footer class="footer">
+      <section class="footer__attribution">
         Challenge by
-        <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
+        <a
+          href="https://www.frontendmentor.io?ref=challenge"
+          class="footer__attribution--link"
+          target="_blank"
           >Frontend Mentor</a
-        >. Coded by <a href="https://ortiz.studio">Antonio Ortiz</a>.
-      </div>
+        >. Coded by
+        <a href="https://ortiz.studio" class="footer__attribution--link"
+          >Antonio ortiz</a
+        >.
+      </section>
     </footer>
   </body>
 </html>
