refactor qr code: deleted unused class

--- a/challenges/qr-code-component/index.html
+++ b/challenges/qr-code-component/index.html
@@ -30,7 +30,7 @@
           <img
             src="./images/image-qr-code.png"
             alt="QR code image"
-            class="has-radius"
+            class="qr__art--img"
           />
         </figure>
         <header class="qr__title">
