--- a/challenges/blog-preview-card/index.html
+++ b/challenges/blog-preview-card/index.html
@@ -11,11 +11,7 @@
       href="./assets/images/favicon-32x32.png"
     />
 
-    <link
-      rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css"
-    />
-
+    <link rel="stylesheet" href="/shared/assets/reset.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -34,36 +30,51 @@
           src="assets/images/illustration-article.svg"
           alt="html tag"
           id="cover"
+          class="card__img"
         />
 
-        <header>
-          <p><span class="tag">Learning</span></p>
-          <p><span class="date">Published 21 Dec 2023</span></p>
-          <h1>
-            <span><a href="#" class="title">HTML & CSS foundations</a></span>
+        <header class="card__header">
+          <span class="card__header--tag">Learning</span>
+          <h2 class="card__header--date">Published 21 Dec 2023</h2>
+          <h1 class="card__header--title">
+            <a href="#" class="card__header--title--link"
+              >HTML & CSS foundations</a
+            >
           </h1>
         </header>
 
-        <p class="description">
+        <p class="card__description">
           These languages are the backbone of every website, defining structure,
           content, and presentation.
         </p>
-        <footer>
+
+        <footer class="card__footer">
           <img
             src="assets/images/image-avatar.webp"
             alt="Greg Hooper avatar"
             id="avatar"
+            class="card__footer--avatar"
           />
-          <h2>Greg Hooper</h2>
+          <h2 class="card__footer--author">Greg Hooper</h2>
         </footer>
       </article>
     </main>
 
-    <div class="attribution">
-      Challenge by
-      <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
-        >Frontend Mentor</a
-      >. Coded by <a href="https://ortiz.studio">Antonio Ortiz</a>.
-    </div>
+    <footer class="footer">
+      <section class="attribution">
+        <p class="attribution__content">
+          Challenge by
+          <a
+            href="https://www.frontendmentor.io?ref=challenge"
+            class="attribution__content--challenge"
+            target="_blank"
+            >Frontend Mentor</a
+          >. Coded by
+          <a href="https://ortiz.studio" class="attribution__content--dev"
+            >Antonio ortiz</a
+          >.
+        </p>
+      </section>
+    </footer>
   </body>
 </html>
